Updating DELETE method for logical deletion